kubernetes/clusters/home/utils/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: utils

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mealie

  template:
    metadata:
      labels:
        app: mealie

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: mealie

          image: ghcr.io/mealie-recipes/mealie:v3.19.2

          ports:
            - containerPort: 9000
              name: http

          volumeMounts:
            - name: config-volume
              mountPath: /app/data

          resources:
            requests:
              cpu: 100m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi

          startupProbe:
            httpGet:
              path: /
              port: 9000
            failureThreshold: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5

      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: mealie-config-pvc
