kubernetes/clusters/home/utils/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: mealie-ingress
  namespace: utils

  annotations:
    external-dns.alpha.kubernetes.io/hostname: mealie.alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "alarlab.dev"

    cert-manager.io/cluster-issuer: letsencrypt-prod

    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - mealie.alarlab.dev
      secretName: mealie-tls

  rules:
    - host: mealie.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-service
                port:
                  number: 9000

    - host: mealie.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-service
                port:
                  number: 9000
